Upgraded to 1.12, inc java 8, enabled MC_OP flag for operator